[package]
name = "naro-rs-template-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
async-session = "3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace", "fs"] }
tracing = "0.1.40"

[dependencies.sqlx]
version = "0.7"
features = ["mysql", "migrate", "chrono", "runtime-tokio", "macros"] 

[dependencies.async-sqlx-session]
git = "https://github.com/maxcountryman/async-sqlx-session.git"
default-features = false
branch = "sqlx-0.7"
features = ["mysql"]
