[package]
name = "naro-rs-template-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-session = "3.0.0"
axum = { version = "0.7.7", features = ["macros"] }
bcrypt = "0.15.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

[dependencies.sqlx]
version = "0.7"
features = ["mysql", "migrate", "chrono", "runtime-tokio", "macros"] 

[dependencies.async-sqlx-session]
git = "https://github.com/maxcountryman/async-sqlx-session.git"
default-features = false
branch = "sqlx-0.7"
features = ["mysql"]
